ajuste home menu

--- a/src/app/pages/home-menu/home-menu.page.html
+++ b/src/app/pages/home-menu/home-menu.page.html
@@ -4,7 +4,7 @@
       <div class="slider_filter-title">
         <h1 id="home-menu">Hola, soy domin<span>go!</span></h1>
         <p id="home-menu">
-          y a partir de ahora seré tu guía. <br />
+          y a partir de ahora seré tu guía.
           ¿Descubrimos juntos un nuevo sitio?
         </p>
       </div>
