avance dark mode

--- a/src/app/pages/artist/artist.page.scss
+++ b/src/app/pages/artist/artist.page.scss
@@ -126,7 +126,7 @@ ion-label {
   height: 35px;
   font-size: 0.9em;
   font-family: "Poppins", sans-serif;
-  color: rgba(116, 108, 108, 0.75);
+  color: var(--ion-color-dark);
 }
 
 .filter_type {
