--- a/src/app/pages/events/events.page.html
+++ b/src/app/pages/events/events.page.html
@@ -195,7 +195,8 @@
         item.whatsapp, 
         item.moneda, 
         item.precio, 
-        item.precioUnico)"
+        item.precioUnico,
+        item.direccion)"
       >
         <ion-avatar item-start class="image-event">
           <ion-img [src]="item.imagen.url" class="img-elem"></ion-img>
