--- a/src/app/pages/event-detail/event-detail.page.scss
+++ b/src/app/pages/event-detail/event-detail.page.scss
@@ -49,12 +49,12 @@ ion-title {
   padding-bottom: 10px;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
-  color: #6b6b6b;
+  color: var(--ion-color-dark);
 }
 
 .div-ubicacion {
   text-decoration: underline;
-  color: #1142a6;
+  color: var(--ion-color-dark);;
   font-family: "Poppins", sans-serif;
 }
 
@@ -64,7 +64,7 @@ ion-title {
   box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 0);
   -webkit-box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 0);
   -moz-box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 0);
-  color: #000;
+  color: var(--ion-color-dark);;
   border-radius: 5px;
   padding: 15px;
   background-color: var(--ion-color-light);
@@ -76,7 +76,7 @@ ion-title {
 
 .mark-info {
   margin-right: 15px !important;
-  color: rgb(5, 153, 49);
+  color: var(--ion-color-dark);
   font-size: 1.2em;
   font-family: "Poppins", sans-serif;
 }
@@ -85,6 +85,7 @@ ion-title {
 .fecha-hora_div {
   font-size: 0.8em;
   font-family: "Poppins", sans-serif;
+  color: var(--ion-color-dark);
 }
 
 .descripcion {
@@ -105,12 +106,12 @@ ion-title {
   flex-direction: row;
   justify-content: space-between;
   position: sticky;
-  bottom: 0px;
-  right: 0px;
+  bottom: 0;
+  right: 0;
   width: 100%;
   height: 60px;
-  background-color: var(--ion-color-light);
-  border-top: 10px solid #fff;
+  background-color: var(--ion-color-text);
+  border-top: 10px solid var(--ion-color-back);
 }
 
 .entradas {
