--- a/src/app/pages/events/events.page.scss
+++ b/src/app/pages/events/events.page.scss
@@ -1,9 +1,3 @@
-.sc-ion-searchbar-md-h {
-  --box-shadow: none !important;
-  padding: 0px !important;
-  border-bottom: 1px solid grey !important;
-}
-
 ::-webkit-scrollbar {
   display: none;
 }
@@ -17,18 +11,6 @@ ion-title {
   color: #fff;
   font-weight: 300;
   font-family: "Poppins", sans-serif;
-}
-
-ion-select,
-ion-searchbar {
-  /* Applies to the value and placeholder color */
-  color: #000000;
-
-  /* Set a different placeholder color */
-  --placeholder-color: #585454bb;
-
-  /* Set full opacity on the placeholder */
-  --placeholder-opacity: 1;
 }
 
 .container {
@@ -52,11 +34,6 @@ ion-searchbar {
   -ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
-ion-chip {
-  flex: 0 0 auto;
-  margin-left: 0px !important;
-}
-
 .event {
   display: flex;
   flex-direction: row;
@@ -74,10 +51,10 @@ ion-chip {
 .info-event {
   width: 55%;
   // margin-left: 2%;
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: center;
-  // align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .info-event > div {
@@ -215,7 +192,7 @@ ion-label {
   height: 35px;
   font-size: 0.9em;
   font-family: "Poppins", sans-serif;
-  color: rgba(116, 108, 108, 0.75);
+  color: var(--ion-color-dark);
 }
 
 .filter_type {
@@ -233,11 +210,11 @@ ion-label {
 }
 
 .open_acordeon {
-  color: #fc67ff
+  color: #fc67ff;
 }
 
 .date_filter {
-  font-size: .6rem;
+  font-size: 0.6rem;
 }
 
 ion-radio {
@@ -249,5 +226,6 @@ ion-radio {
 }
 
 ion-datatime {
-   --ion-color: #fc67ff
- }
+  --ion-color: var(--ion-color-dark);
+  --placeholder-color: var(--ion-color-dark) !important;
+}
