--- a/src/app/pages/home-menu/home-menu.page.scss
+++ b/src/app/pages/home-menu/home-menu.page.scss
@@ -123,7 +123,7 @@
   position: sticky;
   top: 0;
   z-index: 100 !important;
-  background-color: #fff;
+  background-color: var(--ion-color-back);
   margin-bottom: 4%;
 }
 
