--- a/src/app/pages/place-selected/place-selected.page.scss
+++ b/src/app/pages/place-selected/place-selected.page.scss
@@ -26,7 +26,7 @@
   .divc {
     width: 100%;
     height: auto;
-    background-color: var(--ion-color-light);
+    background-color: var(--ion-color-text);
   }
   
   .divd {
@@ -93,6 +93,7 @@
   .sugerencia {
     width: 50%;
     display: flex;
+    text-decoration: none;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: flex-start;
