--- a/src/app/pages/events/events.page.scss
+++ b/src/app/pages/events/events.page.scss
@@ -225,7 +225,6 @@ ion-radio {
   padding: 0 !important;
 }
 
-ion-datatime {
-  --ion-color: var(--ion-color-dark);
-  --placeholder-color: var(--ion-color-dark) !important;
+ion-datetime {
+  --placeholder-color: var(--ion-color-dark);
 }
