--- a/src/app/pages/artist/artist.page.scss
+++ b/src/app/pages/artist/artist.page.scss
@@ -20,7 +20,7 @@
   flex-direction: row;
   margin: 10px 4%;
   border-radius: 5px;
-  background-color: rgb(243, 243, 243);
+  background-color: var(--ion-color-light);
 }
 
 .imgArtist {
@@ -62,7 +62,7 @@
 
 .name {
   font-family: "Poppins", sans-serif;
-  color: #999;
+  color: var(--ion-color-dark) !important;
   padding-right: 3px;
 }
 
