--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -375,8 +375,8 @@ body.dark {
  */
 
 .md body.dark {
-  --ion-background-color: #121212;
-  --ion-background-color-rgb: 18, 18, 18;
+  --ion-background-color: #000000;
+  --ion-background-color-rgb: 0, 0, 0;
 
   --ion-text-color: #ffffff;
   --ion-text-color-rgb: 255, 255, 255;
@@ -403,11 +403,11 @@ body.dark {
   --ion-color-step-900: #e7e7e7;
   --ion-color-step-950: #f3f3f3;
 
-  --ion-item-background: #1e1e1e;
+  --ion-item-background: #000000;
 
-  --ion-toolbar-background: #1f1f1f;
+  --ion-toolbar-background: #000000;
 
-  --ion-tab-bar-background: #1f1f1f;
+  --ion-tab-bar-background: #000000;
 }
 
 /*
