tamaño dinámico sliders

--- a/src/app/pages/events/events.page.html
+++ b/src/app/pages/events/events.page.html
@@ -9,6 +9,7 @@
   <div id="alto" class="slider">
     <ion-slides
       class="sliderPrimero"
+      id="setHeight"
       scrollbar="false"
       pager="false"
       [options]="slideOpts"
