--- a/src/app/pages/artist/artist.page.html
+++ b/src/app/pages/artist/artist.page.html
@@ -8,6 +8,7 @@
   <div id="alto" class="slider">
     <ion-slides
       class="sliderPrimero"
+      id="setHeight"
       scrollbar="false"
       pager="false"
       [options]="slideOpts"
