Revert "splash screen"
This reverts commit 25bc7c19657ab94a102f49aacb8f926aeb2cab9d.

--- a/src/app/pages/place-selected/place-selected.page.html
+++ b/src/app/pages/place-selected/place-selected.page.html
@@ -67,6 +67,9 @@
         <div class="iconEstilos" *ngIf="place.caminar == true">
           <ion-icon name="walk-outline"></ion-icon>
         </div>
+        <!-- <div id="dist">
+                  <div>{{ distancia | formatDistancia }}</div>                 
+              </div> -->
       </div>
       <p
         class="text"
