--- a/src/app/pages/where-eat/where-eat.page.html
+++ b/src/app/pages/where-eat/where-eat.page.html
@@ -37,7 +37,7 @@
     <div>
       <form [formGroup]="filterForm" class="form_filter">
         <!-- Filtro por Localidad  -->
-        <div *ngIf="isFilterLocation">
+        <div  *ngIf="isFilterLocation">
           <div class="filter_name">
             <span id="filters">Localidad</span>
           </div>
@@ -70,8 +70,19 @@
   </div>
 
   <ion-list class="lista">
+    <div
+      class="empty"
+      *ngIf="eat.length === 0 || (checkDistance !== 'OK' && checkDistance !== 'FOUND')"
+    >
+      <i class="fi fi-rr-sad icon_empty"></i>
+      <div class="text_empty">
+        No hay lugares para mostrar con el filtro seleccionado
+      </div>
+    </div>
     <ng-container *ngFor="let item of eat | filtroDondeComer:dataForm">
-      <ion-item *ngIf="isVisible; else noVisible">
+      <ion-item
+        *ngIf="(item.mostrar && checkDistance === 'FOUND') || (checkDistance === 'OK')"
+      >
         <div class="padre">
           <div class="imagen">
             <ion-avatar item-start>
@@ -95,13 +106,5 @@
         </div>
       </ion-item>
     </ng-container>
-    <ng-template #noVisible>
-      <div class="empty">
-        <i class="fi fi-rr-sad icon_empty"></i>
-        <div class="text_empty">
-          No hay lugares para mostrar con el filtro seleccionado
-        </div>
-      </div>
-    </ng-template>
   </ion-list>
 </ion-content>
