ajustes de colores

--- a/src/app/pages/events/events.page.html
+++ b/src/app/pages/events/events.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="favorite">
-    <ion-img slot="start" src="/assets/icon/eventos.png"></ion-img>
+    <ion-icon slot="start" name="calendar-outline"></ion-icon>
     <ion-title>Eventos</ion-title>
   </ion-toolbar>
 </ion-header>
