--- a/src/app/pages/events/events.page.scss
+++ b/src/app/pages/events/events.page.scss
@@ -2,13 +2,14 @@
   display: none;
 }
 
-ion-img {
-  width: 12%;
-  margin-left: 4px;
+ion-icon {
+  font-size: 1.5rem;
+  margin-left: 8%;
+  color: var(--ion-color-back);
 }
 
 ion-title {
-  color: #fff;
+  color: var(--ion-color-back);
   font-weight: 300;
   font-family: "Poppins", sans-serif;
 }
