--- a/src/app/pages/information/information.page.html
+++ b/src/app/pages/information/information.page.html
@@ -3,7 +3,7 @@
         <ion-buttons slot="start">
             <ion-back-button defaultHref="home-menu" color="back"></ion-back-button>
         </ion-buttons>
-        <ion-img src="/assets/icon/info.png" class="iconInfo" slot="end"></ion-img>
+        <ion-icon name="information-outline" class="iconInfo" slot="end"></ion-icon>
     </ion-toolbar>
 </ion-header>
 <ion-content>
