--- a/src/app/pages/place/place.page.scss
+++ b/src/app/pages/place/place.page.scss
@@ -75,7 +75,7 @@ ion-label {
 .distancia {
   float: left;
   margin-left: 3%;
-  padding: 0;
+  padding: 3px;
   font-family: 'Poppins', sans-serif;
   font-weight: 400 !important;
 }
