--- a/src/app/pages/where-eat/where-eat.page.html
+++ b/src/app/pages/where-eat/where-eat.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="eat">
-    <ion-img slot="start" src="/assets/icon/comida.png"></ion-img>
+    <ion-icon slot="start" name="restaurant-outline"></ion-icon>
     <ion-title>¿Dónde Comer?</ion-title>
   </ion-toolbar>
 </ion-header>
