--- a/src/app/pages/where-sleep/where-sleep.page.html
+++ b/src/app/pages/where-sleep/where-sleep.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="circuits">
     <!-- <img slot="start" src="/assets/icon/dormir.png"> -->
-    <ion-img slot="start" src="/assets/icon/dormir.png"></ion-img>
+    <ion-icon slot="start" name="bed-outline"></ion-icon>
     <ion-title>¿Dónde Dormir?</ion-title>
   </ion-toolbar>
 </ion-header>
