--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -76,12 +76,12 @@
   --ion-color-light-tint: #f5f6f9;
 
   /** information **/
-  --ion-color-information: #ffd200;
-  --ion-color-information-rgb: 255, 210, 0;
-  --ion-color-information-contrast: #000000;
-  --ion-color-information-contrast-rgb: 0, 0, 0;
-  --ion-color-information-shade: #e0b900;
-  --ion-color-information-tint: #ffd71a;
+  --ion-color-information: #ffc04e;
+	--ion-color-information-rgb: 255,192,78;
+	--ion-color-information-contrast: #000000;
+	--ion-color-information-contrast-rgb: 0,0,0;
+	--ion-color-information-shade: #e0a945;
+	--ion-color-information-tint: #ffc660;
 
   /** acorddion **/
   --ion-color-acorddion: #e5e5e5;
@@ -92,28 +92,28 @@
   --ion-color-acorddion-tint: #e8e8e8;
 
   /** favorite **/
-  --ion-color-favorite: #c706ff;
-  --ion-color-favorite-rgb: 199, 6, 255;
-  --ion-color-favorite-contrast: #ffffff;
-  --ion-color-favorite-contrast-rgb: 255, 255, 255;
-  --ion-color-favorite-shade: #af05e0;
-  --ion-color-favorite-tint: #cd1fff;
+  --ion-color-favorite: #fd68ff;
+	--ion-color-favorite-rgb: 253,104,255;
+	--ion-color-favorite-contrast: #000000;
+	--ion-color-favorite-contrast-rgb: 0,0,0;
+	--ion-color-favorite-shade: #df5ce0;
+	--ion-color-favorite-tint: #fd77ff;
 
   /** more-options **/
-  --ion-color-options: #10dda6;
-  --ion-color-options-rgb: 16, 221, 166;
-  --ion-color-options-contrast: #000000;
-  --ion-color-options-contrast-rgb: 0, 0, 0;
-  --ion-color-options-shade: #0ec292;
-  --ion-color-options-tint: #28e0af;
+  --ion-color-options: #01dfb8;
+	--ion-color-options-rgb: 1,223,184;
+	--ion-color-options-contrast: #000000;
+	--ion-color-options-contrast-rgb: 0,0,0;
+	--ion-color-options-shade: #01c4a2;
+	--ion-color-options-tint: #1ae2bf;
 
   /** circuits **/
-  --ion-color-circuits: #0ae9e6;
-  --ion-color-circuits-rgb: 10, 233, 230;
-  --ion-color-circuits-contrast: #000000;
-  --ion-color-circuits-contrast-rgb: 0, 0, 0;
-  --ion-color-circuits-shade: #09cdca;
-  --ion-color-circuits-tint: #23ebe9;
+  --ion-color-circuits: #69eaff;
+	--ion-color-circuits-rgb: 105,234,255;
+	--ion-color-circuits-contrast: #000000;
+	--ion-color-circuits-contrast-rgb: 0,0,0;
+	--ion-color-circuits-shade: #5ccee0;
+	--ion-color-circuits-tint: #78ecff;
 
   /** back **/
   --ion-color-back: #ffffff;
@@ -132,12 +132,12 @@
   --ion-color-text-tint: #f5f6f9;
 
   /** eat **/
-  --ion-color-eat: #ff9c00;
-  --ion-color-eat-rgb: 255, 156, 0;
-  --ion-color-eat-contrast: #000000;
-  --ion-color-eat-contrast-rgb: 0, 0, 0;
-  --ion-color-eat-shade: #e08900;
-  --ion-color-eat-tint: #ffa61a;
+  --ion-color-eat: #42deb7;
+	--ion-color-eat-rgb: 66,222,183;
+	--ion-color-eat-contrast: #000000;
+	--ion-color-eat-contrast-rgb: 0,0,0;
+	--ion-color-eat-shade: #3ac3a1;
+	--ion-color-eat-tint: #55e1be;
 
   /** wahtsapp **/
   --ion-color-whatsapp: #01e675;
@@ -148,12 +148,12 @@
   --ion-color-whatsapp-tint: #1ae983;
 
   /** party **/
-  --ion-color-party: #e702ff;
-  --ion-color-party-rgb: 231, 2, 255;
-  --ion-color-party-contrast: #ffffff;
-  --ion-color-party-contrast-rgb: 255, 255, 255;
-  --ion-color-party-shade: #cb02e0;
-  --ion-color-party-tint: #e91bff;
+  --ion-color-party: #cca5fe;
+	--ion-color-party-rgb: 204,165,254;
+	--ion-color-party-contrast: #000000;
+	--ion-color-party-contrast-rgb: 0,0,0;
+	--ion-color-party-shade: #b491e0;
+	--ion-color-party-tint: #d1aefe;
 }
 
 .ion-color-information {
