cambio botón menú

--- a/src/app/pages/events/events.page.scss
+++ b/src/app/pages/events/events.page.scss
@@ -68,7 +68,7 @@ ion-title {
 
 .fecha {
   font-weight: bold;
-  color: #e76c2e;
+  color: var(--ion-color-favorite);
   font-size: 0.7em;
   font-family: "Poppins", sans-serif;
 }
