--- a/src/app/pages/artist/artist.page.scss
+++ b/src/app/pages/artist/artist.page.scss
@@ -3,6 +3,9 @@
 .slider {
   width: 100%;
   position: -webkit-sticky;
+  position: -moz-sticky;
+  position: -o-sticky;
+  position: -ms-sticky;
   position: sticky;
   top: 0;
   z-index: 10;
@@ -38,11 +41,11 @@
 
 #info-art:nth-child(1) {
   font-weight: bold;
- }
+}
 
- #info-art:nth-child(2) {
+#info-art:nth-child(2) {
   color: rgb(29, 29, 29);
- }
+}
 
 .img-elem {
   border-top-left-radius: 5px !important;
@@ -72,7 +75,7 @@
   }
 }
 
-// filtro 
+// filtro
 .filter_place {
   display: flex;
   flex-direction: row;
@@ -150,7 +153,7 @@ ion-label {
 }
 
 .open_filter {
-  color: #fc67ff
+  color: #fc67ff;
 }
 
 ion-radio {
