--- a/src/app/pages/information/information.page.html
+++ b/src/app/pages/information/information.page.html
@@ -15,8 +15,7 @@
             </ion-slide>            
         </ion-slides>
     </div>
-    <!-- <ion-searchbar placeholder="" (ionChange)="buscar($event)"></ion-searchbar> -->
-    <div class="lista">
+    <!-- <div class="lista">
         <ion-list *ngFor="let item of information | filtroInformacion:textoBuscar; let i = index" class="accordion-list" lines="none" detail="false" no-padding>
             <ion-item tappable (click)="toggleSection(i)" [ngClass]="{'section-active': item.open, 'section': !item.open}" class="item-accordion" color="acorddion">
                 <ion-icon class="info-name" slot="start" name="arrow-forward" *ngIf="!item.open"></ion-icon>
@@ -39,6 +38,7 @@
             </div>
             <p *ngIf="item.children.length == 0 && item.open" text-center class="no-exist">No existen números aquí</p>
         </ion-list>
-    </div>
+    </div> -->
+    
     
 </ion-content>
