--- a/src/app/pages/event-detail/event-detail.page.html
+++ b/src/app/pages/event-detail/event-detail.page.html
@@ -65,7 +65,7 @@
     </div>
     <div class="precio" (click)="openModalSellingPoint(instagram, tickAntel, facebook, whatsapp)">
       <div><i class="fas fa-ticket-alt mark-info"></i></div>
-      <div id="event-detail-container" class="puntos-venta">Ver puntos de venta</div>
+      <div id="event-detail-container" class="puntos-venta">ver puntos de venta</div>
     </div>
   </div>
 </ion-content>
