--- a/src/app/pages/event-detail/event-detail.page.scss
+++ b/src/app/pages/event-detail/event-detail.page.scss
@@ -106,10 +106,16 @@ ion-title {
   flex-direction: row;
   justify-content: space-between;
   position: sticky;
+  position: -webkit-sticky;
+  position: -moz-sticky;
+  position: -o-sticky;
+  position: -ms-sticky;
   bottom: 0;
   right: 0;
+  z-index: 1001;
+  //top: 100vh;
   width: 100%;
-  height: 60px;
+  //height: 60px;
   background-color: var(--ion-color-text);
   border-top: 10px solid var(--ion-color-back);
 }
@@ -126,7 +132,7 @@ ion-title {
 .precio {
   width: 63%;
   margin: 4px;
-  background-color: #0fe921;
+  background-color: var(--ion-color-options);
   border-radius: 10px;
   display: flex;
   justify-content: center;
@@ -180,28 +186,28 @@ li {
 }
 
 .count-bg-one {
-  background: #468dbc;
+  background: var(--ion-color-party);
   font-size: 0.5em;
   font-weight: 400;
   color: white;
 }
 
 .count-bg-two {
-  background: #ef9024;
+  background: var(--ion-color-information);
   font-size: 0.5em;
   font-weight: 400;
   color: white;
 }
 
 .count-bg-three {
-  background: #ee337f;
+  background: var(--ion-color-favorite);
   font-size: 0.5em;
   font-weight: 400;
   color: white;
 }
 
 .count-bg-four {
-  background: #1fb1f4;
+  background: var(--ion-color-circuits);
   font-size: 0.5em;
   font-weight: 400;
   color: white;
@@ -215,4 +221,25 @@ li {
 
 .raduis {
   font-family: "Poppins", sans-serif;
+}
+
+@media only screen and (min-height: 750px) {
+  .ticket {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    position: sticky;
+    position: -webkit-sticky;
+    position: -moz-sticky;
+    position: -o-sticky;
+    position: -ms-sticky;
+    bottom: 0;
+    right: 0;
+    z-index: 1001;
+    top: 100vh;
+    width: 100%;
+    //height: 60px;
+    background-color: var(--ion-color-text);
+    border-top: 10px solid var(--ion-color-back);
+  }
 }
