--- a/src/app/pages/where-eat/where-eat.page.html
+++ b/src/app/pages/where-eat/where-eat.page.html
@@ -37,7 +37,7 @@
     <div>
       <form [formGroup]="filterForm" class="form_filter">
         <!-- Filtro por Localidad  -->
-        <div  *ngIf="isFilterLocation">
+        <div *ngIf="isFilterLocation">
           <div class="filter_name">
             <span id="filters">Localidad</span>
           </div>
@@ -69,42 +69,63 @@
     </div>
   </div>
 
-  <ion-list class="lista">
-    <!-- <div
-      class="empty"
-      *ngIf="eat.length === 0"
-    >
-      <i class="fi fi-rr-sad icon_empty"></i>
-      <div class="text_empty">
-        No hay lugares para mostrar con el filtro seleccionado
-      </div>
-    </div> -->
-    <ng-container *ngFor="let item of eat | filtroDondeComer:dataForm">
-      <ion-item
-        *ngIf="(item.distanciaNumber <= dist || dep != null)"
-      >
-        <div class="padre">
-          <div class="imagen">
-            <ion-avatar item-start>
-              <ion-img [src]="item.imagen.url" class="img-elem"></ion-img>
-            </ion-avatar>
-            <small id="eat-info">{{item.distancia | formatDistancia}}</small>
+  <div>
+    <ion-list class="lista">
+      <ng-container *ngFor="let item of eat | filtroDondeComer:dataForm">
+        <ion-item *ngIf="(item.distanciaNumber <= dist || dep != null)">
+          <div class="padre">
+            <div class="imagen">
+              <ion-avatar item-start>
+                <ion-img [src]="item.imagen.url" class="img-elem"></ion-img>
+              </ion-avatar>
+              <small id="eat-info">{{item.distancia | formatDistancia}}</small>
+            </div>
+            <div class="info">
+              <ion-label>
+                <h2 id="eat-info">{{ item.nombre }}</h2>
+                <div class="infoAbajo">
+                  <h3 id="eat-info">{{ item.direccion }}</h3>
+                  <p id="eat-info" *ngFor="let tel of item.telefonos">
+                    <span id="eat-info">Tel: </span>{{ tel.numero }}
+                  </p>
+                </div>
+                <ion-icon class="contact" name="logo-instagram"></ion-icon>
+                <ion-icon class="contact" name="logo-whatsapp"></ion-icon>
+              </ion-label>
+            </div>
           </div>
-          <div class="info">
-            <ion-label>
-              <h2 id="eat-info">{{ item.nombre }}</h2>
-              <div class="infoAbajo">
-                <h3 id="eat-info">{{ item.direccion }}</h3>
-                <p id="eat-info" *ngFor="let tel of item.telefonos">
-                  <span id="eat-info">Tel: </span>{{ tel.numero }}
-                </p>
-              </div>
-              <ion-icon class="contact" name="logo-instagram"></ion-icon>
-              <ion-icon class="contact" name="logo-whatsapp"></ion-icon>
-            </ion-label>
-          </div>
-        </div>
-      </ion-item>
-    </ng-container>
-  </ion-list>
+        </ion-item>
+      </ng-container>
+    </ion-list>
+
+    <ion-list *ngIf="eat.length === 0">
+      <ng-container *ngFor="let item of [1,2,3,4,5,6,7,8,9,10]">
+        <ion-item>
+          <ion-thumbnail slot="start">
+            <ion-skeleton-text></ion-skeleton-text>
+          </ion-thumbnail>
+          <ion-label>
+            <h3>
+              <ion-skeleton-text
+                animated
+                style="width: 80%"
+              ></ion-skeleton-text>
+            </h3>
+            <p>
+              <ion-skeleton-text
+                animated
+                style="width: 60%"
+              ></ion-skeleton-text>
+            </p>
+            <p>
+              <ion-skeleton-text
+                animated
+                style="width: 30%"
+              ></ion-skeleton-text>
+            </p>
+          </ion-label>
+        </ion-item>
+      </ng-container>
+    </ion-list>
+  </div>
 </ion-content>
