--- a/src/app/pages/place/place.page.scss
+++ b/src/app/pages/place/place.page.scss
@@ -80,6 +80,10 @@ ion-label {
   font-weight: 400 !important;
 }
 
+.sliderPrimero {
+  background-color: #eeeeee;
+}
+
 .sliderPrimero,
 .sliderHijo,
 .banner,
