--- a/src/app/pages/artist/artist.page.html
+++ b/src/app/pages/artist/artist.page.html
@@ -7,14 +7,17 @@
 <ion-content>
   <div id="alto" class="slider">
     <ion-slides
-      class="sliderPrimero"
-      id="setHeight"
+      class="sliderPrimero setHeight"
       scrollbar="false"
       pager="false"
       [options]="slideOpts"
     >
       <ion-slide *ngFor="let item of sliderArtist" class="sliderHijo">
-        <img class="imgSlider" src="{{item.imagen.url}}" />
+        <app-preload
+          [url]="item.imagen.url"
+          [alt]="item.imagen.name"
+          [urlPreload]="preloadImage"
+        ></app-preload>
       </ion-slide>
     </ion-slides>
     <!-- </div> -->
