--- a/src/app/pages/place/place.page.html
+++ b/src/app/pages/place/place.page.html
@@ -4,8 +4,7 @@
 <ion-content>
   <div id="alto" class="slider">
     <ion-slides
-      class="sliderPrimero"
-      id="setHeight"
+      class="sliderPrimero setHeight"
       scrollbar="false"
       pager="false"
       [options]="slideOpts"
