--- a/src/app/pages/where-sleep/where-sleep.page.html
+++ b/src/app/pages/where-sleep/where-sleep.page.html
@@ -6,16 +6,19 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <div id="alto" class="slider">
+  <div class="slider">
     <ion-slides
-      class="sliderPrimero"
-      id="setHeight"
+      class="sliderPrimero setHeight"
       scrollbar="false"
       pager="false"
       [options]="slideOpts"
     >
       <ion-slide *ngFor="let item of sliderSleep" class="sliderHijo">
-        <img class="imgSlider" src="{{item.imagen.url}}" />
+        <app-preload
+          [url]="item.imagen.url"
+          [alt]="item.imagen.name"
+          [urlPreload]="preloadImage"
+        ></app-preload>
       </ion-slide>
     </ion-slides>
 
@@ -45,7 +48,7 @@
             <span id="filters">Localidad</span>
           </div>
           <div>
-            <ion-list class="list_location" (click)="changeFilterEat()">
+            <ion-list class="list_location" (click)="changeFilterSleep()">
               <ion-radio-group
                 (ionChange)="filterSleep()"
                 formControlName="localidad"
