--- a/src/app/pages/where-eat/where-eat.page.html
+++ b/src/app/pages/where-eat/where-eat.page.html
@@ -69,10 +69,10 @@
     </div>
   </div>
 
-  <div>
+  <div> 
     <ion-list class="lista">
       <ng-container *ngFor="let item of eat | filtroDondeComer:dataForm">
-        <ion-item *ngIf="(item.distanciaNumber <= dist || dep != null)">
+        <ion-item *ngIf="(item.distanciaNumber <= dist || (dep != null && !this.eatSvc.noData && item.departamento === dep))">
           <div class="padre">
             <div class="imagen">
               <ion-avatar item-start>
@@ -98,7 +98,7 @@
       </ng-container>
     </ion-list>
 
-    <ion-list *ngIf="eat.length === 0">
+    <ion-list *ngIf="eat.length === 0 && !this.eatSvc.noData">
       <ng-container *ngFor="let item of [1,2,3,4,5,6]">
         <ion-item>
           <ion-thumbnail slot="start">
@@ -127,5 +127,19 @@
         </ion-item>
       </ng-container>
     </ion-list>
+
+    <div *ngIf="this.eatSvc.noData && dist === null" class="empty">
+      <i class="fi fi-rr-sad icon_empty"></i>
+      <div class="text_empty">
+       No existen lugares en {{ dep }}
+      </div>
+    </div>
+
+    <div *ngIf="!this.eatSvc.controlDistance && dist !== null" class="empty">
+      <i class="fi fi-rr-sad icon_empty"></i>
+      <div class="text_empty">
+       No existen lugares en el rango de {{ dist }} km
+      </div>
+    </div>
   </div>
 </ion-content>
