--- a/src/app/pages/where-eat/where-eat.page.scss
+++ b/src/app/pages/where-eat/where-eat.page.scss
@@ -112,6 +112,10 @@ small {
   width: 100%;
 }
 
+.sliderPrimero {
+  background-color: #eeeeee;
+}
+
 #eat-info {
   white-space: nowrap;
   text-overflow: ellipsis;
