--- a/src/app/pages/where-sleep/where-sleep.page.scss
+++ b/src/app/pages/where-sleep/where-sleep.page.scss
@@ -135,6 +135,10 @@ p {
   width: 100%;
 }
 
+.sliderPrimero {
+  background-color: #eeeeee;
+}
+
 .filter_place {
   display: flex;
   flex-direction: row;
